# gr-alt-moving-average

./: CMakeLists.txt  README.md
example/: wma-test.grc  wma_test.py
examples/: wma-test.grc  wma_test.py
grc/: CMakeLists.txt  wmoving.xml
python/: CMakeLists.txt  __init__.py  qa_test_avg.py  wmoving.py
